--- a/pages/index.css
+++ b/pages/index.css
@@ -3,3 +3,11 @@
 @import url("../blocks/body/body.css");
 @import url("../blocks/header/header.css");
 @import url("../blocks/header/__logo/header__logo.css");
+@import url("../blocks/profile/profile.css");
+@import url("../blocks/profile/__name-info/profile__name-info.css");
+@import url("../blocks/profile/__name/profile__name.css");
+@import url("../blocks/profile/__info/profile__info.css");
+@import url("../blocks/profile/__avatar/profile__avatar.css");
+@import url("../blocks/profile/__edit-button/profile__edit-button.css");
+@import url("../blocks/profile/__add-button/profile__add-button.css");
+@import url("../blocks/profile/__three-columns/profile__three-columns.css");
