--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,5 +1,21 @@
 .profile__add-button{
-  margin: 0 0 5px 0;
+  margin: 0 0 5px;
   align-self: center;
   justify-self: flex-end;
+  width: 150px;
+  height: 50px;
+  border: 2px solid #FFFFFF;
+  border-radius: 2px;
+  display: flex;
+  justify-content: center;
 }
+
+@media screen and (max-width: 768px){
+  .profile__add-button{
+    margin: 0;
+    width: 282px;
+    height: 50px;
+    box-sizing: border-box;
+  }
+}
+
