--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,7 +1,15 @@
 .profile__edit-button{
-  margin: 0 0 30px 18px;
+  margin: 0 0 0 18px;
   width: 24px;
   height: 24px;
   aspect-ratio: 1/1;
   align-self: center;
+}
+
+@media screen and (max-width: 768px){
+  .profile__edit-button{
+    margin: 0 0 0 10px;
+    width:18px;
+    height: 18px;
+  }
 }
