--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -5,3 +5,12 @@
   font-size: 18px;
   line-height: 22px;
 }
+
+@media screen and (max-width: 768px){
+  .profile__info{
+    font-size: 14px;
+    line-height: 17px;
+    text-align: center;
+    margin: 0 0 36px;
+  }
+}
