--- a/blocks/profile/__name-info/profile__name-info.css
+++ b/blocks/profile/__name-info/profile__name-info.css
@@ -4,3 +4,10 @@
   margin: 0 0 0 30px ;
   justify-content: center;
 }
+
+
+@media screen and (max-width: 768px){
+  .profile__name-info{
+    margin: 0;
+  }
+}
