--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -5,3 +5,12 @@
   font-size: 42px;
   line-height: 48px;
 }
+
+@media screen and (max-width: 768px){
+  .profile__name{
+    margin: 26px 0 14px;
+    font-size: 27px;
+    line-height: 33px;
+    text-align: center;
+  }
+}
