--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,7 +1,14 @@
 .profile{
   display: flex;
-  width: 880px;
+  width: 90%;
   max-width: 880px;
   margin: 40px auto 0;
   justify-content: space-between;
+}
+
+@media screen and (max-width: 768px) {
+  .profile{
+    flex-direction: column;
+    justify-content: center;
+  }
 }
