--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,10 +6,11 @@
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
 
-@media  screen and (max-width: 320px) {
+@media  screen and (max-width: 768px) {
   .header{
     width: 100%;
     padding-left: 27px;
     margin: 28px 0 0;
+    height: 56px;
   }
 }
