--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,16 +1,17 @@
 .profile__name{
   color: white;
-  margin: 0 0 16px;
+  margin: 0;
   font-weight: 500;
   font-size: 42px;
   line-height: 48px;
+  box-sizing: border-box;
 }
 
 @media screen and (max-width: 768px){
   .profile__name{
-    margin: 26px 0 14px;
+    margin: 26px auto 0;
     font-size: 27px;
-    line-height: 33px;
+    line-height: 26px;
     text-align: center;
   }
 }
