--- a/blocks/profile/__two-columns/profile__two-columns.css
+++ b/blocks/profile/__two-columns/profile__two-columns.css
@@ -1,4 +1,5 @@
 .profile__two-columns{
+  margin: 0;
   display: flex;
 }
 
@@ -7,5 +8,6 @@
     justify-content: center;
     flex-direction: column;
     max-width: 282px;
+    align-self: center;
   }
 }
