--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -3,6 +3,7 @@
   width: 90%;
   max-width: 880px;
   display: grid;
+  justify-content: center;
   grid-template-columns: repeat(auto-fit,282px);
   column-gap: 17px;
   row-gap: 20px;
