--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -8,6 +8,7 @@
 
 @media  screen and (max-width: 768px) {
   .header{
+    box-sizing: border-box;
     width: 100%;
     padding-left: 27px;
     margin: 28px 0 0;
