--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,15 +1,18 @@
 .profile__edit-button{
-  margin: 0 0 0 18px;
+  background-image: url("../../../images/profile__edit.svg");
+  margin: 0 0 30px 18px;
   width: 24px;
   height: 24px;
   aspect-ratio: 1/1;
   align-self: center;
+  background-size: cover;
 }
 
 @media screen and (max-width: 768px){
   .profile__edit-button{
-    margin: 0 0 0 10px;
+    margin: 40% 0 0 10px;
     width:18px;
     height: 18px;
+    align-self: center;
   }
 }
