--- a/pages/index.css
+++ b/pages/index.css
@@ -5,6 +5,7 @@
 @import url("../blocks/header/__logo/header__logo.css");
 @import url("../blocks/profile/profile.css");
 @import url("../blocks/profile/__name-info/profile__name-info.css");
+@import url("../blocks/profile/__container/profile__container.css");
 @import url("../blocks/profile/__name/profile__name.css");
 @import url("../blocks/profile/__info/profile__info.css");
 @import url("../blocks/profile/__avatar/profile__avatar.css");
@@ -25,3 +26,11 @@
 @import url("../blocks/element/__img/_background/element__img_background_dombay.css");
 @import url("../blocks/footer/footer.css");
 @import url("../blocks/footer/__copyright/footer__copyright.css");
+@import url("../blocks/popup/popup.css");
+@import url("../blocks/popup/__container/popup__container.css");
+@import url("../blocks/popup/__title/popup__title.css");
+@import url("../blocks/popup/__name/popup__name.css");
+@import url("../blocks/popup/__info/popup__info.css");
+@import url("../blocks/popup/__button/popup__button.css");
+@import url("../blocks/popup/__cross/popup__cross.css");
+@import url("../blocks/popup/_opened/popup_opened.css");
