hotfix: исправить замечания ревьюера

--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -8,6 +8,8 @@
 
 @media screen and (max-width: 768px){
   .footer__copyright{
+    margin-top: 48px;
+    margin-bottom: 36px;
     font-size: 14px;
     line-height: 17px;
   }
