--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,7 +2,7 @@
   width: 90%;
   margin: 45px auto 0;
   max-width: 880px;
-  height: 76px;
+  min-height: 76px;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
 
@@ -11,7 +11,9 @@
     box-sizing: border-box;
     width: 100%;
     padding-left: 27px;
-    margin: 28px 0 0;
-    height: 56px;
+    margin-top: 28px;
+    margin-left: 0;
+    margin-right: 0;
+    min-height: 56px;
   }
 }
