--- a/blocks/popup/__cross/popup__cross.css
+++ b/blocks/popup/__cross/popup__cross.css
@@ -1,19 +1,21 @@
 .popup__cross{
-  position: fixed;
-  top: calc(50% - 390px/2);
-  left: calc(50% + 430px/2);
+  position: absolute;
   background-image: url("../../../images/popup__cross.png");
   width: 32px;
   height: 32px;
+  top:-40px;
+  right: -40px;
   cursor: pointer;
   background-size: cover;
+  background-color: black;
+  z-index: 3;
 }
 
 @media screen and (max-width: 768px){
   .popup__cross{
     width: 20px;
     height: 20px;
-    top: calc(50% - 378px/2);
-    left: calc(50% + 242px/2);
+    top: -36px;
+    right: 0;
   }
 }
