--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -11,6 +11,6 @@
     width: 95%;
     flex-direction: column;
     justify-content: center;
-    margin: 42px auto 0;
+    margin-top: 42px;
   }
 }
