--- a/blocks/body/body.css
+++ b/blocks/body/body.css
@@ -1,6 +1,8 @@
 .body{
   background-color: #000000;
-  font-family: "Inter", sans-serif;
+  font-family: "Inter",Arial, sans-serif;
   margin: 0;
   width: 100%;
+  webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
