--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -10,10 +10,11 @@
   line-height: 22px;
   text-align: center;
   cursor: pointer;
+  margin: 0 0 25px;
 }
 
 .popup__button:hover{
-  opacity: 0.8;
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 @media screen and (max-width: 768px) {
