--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -2,13 +2,15 @@
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
-  margin:34px auto 54px;
+  margin:34px 0 43px;
+  width: 358px;
 }
 
 @media screen and (max-width: 768px) {
   .popup__title{
     font-size: 18px;
     line-height: 22px;
-    margin:25px auto 75px;
+    margin:25px auto 70px;
+    width: 238px;
   }
 }
