--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -6,14 +6,15 @@
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: 1;
 }
 .popup:after{
   content: '';
   position: fixed;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
+  width: 100%;
+  height: 100%;
   background: #000000;
   opacity: 0.5;
   z-index: 1;
