--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -8,11 +8,12 @@
   border-radius: 2px;
   display: flex;
   justify-content: center;
+  background-color: black;
 }
 
 @media screen and (max-width: 768px){
   .profile__add-button{
-    margin: 0;
+    margin-bottom: 0;
     width: 282px;
     height: 50px;
     box-sizing: border-box;
