--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,18 +1,23 @@
 .profile__edit-button{
-  background-image: url("../../../images/profile__edit.svg");
   margin: 0 0 30px 18px;
   width: 24px;
-  height: 24px;
   aspect-ratio: 1/1;
   align-self: center;
   background-size: cover;
+  background-color: black;
+  border: 1px solid #FFFFFF;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 @media screen and (max-width: 768px){
   .profile__edit-button{
-    margin: 40% 0 0 10px;
+    margin-top: 36%;
+    margin-bottom: 0;
+    margin-left: 10px;
     width:18px;
     height: 18px;
-    align-self: center;
   }
 }
