--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,9 +1,12 @@
 .profile__info{
   color: white;
-  margin: 16px 0 0;
+  margin: 12px 0 0;
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 768px){
@@ -11,6 +14,7 @@
     font-size: 14px;
     line-height: 14px;
     text-align: center;
-    margin: 14px 0 36px;
+    margin-top: 14px;
+    margin-bottom: 33px;
   }
 }
