--- a/blocks/profile/__name-info/profile__name-info.css
+++ b/blocks/profile/__name-info/profile__name-info.css
@@ -3,10 +3,11 @@
   flex-direction: column;
   margin: 0 0 0 30px;
   justify-content: center;
+  max-width: 336px;
 }
 
 @media screen and (max-width: 768px){
   .profile__name-info{
-    margin: 0;
+    margin-left: 0;
   }
 }
