--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -5,11 +5,16 @@
   font-size: 42px;
   line-height: 48px;
   box-sizing: border-box;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 768px){
   .profile__name{
-    margin: 26px auto 0;
+    margin-top: 30px;
+    margin-left: auto;
+    margin-right: auto;
     font-size: 27px;
     line-height: 26px;
     text-align: center;
