--- a/blocks/body/body.css
+++ b/blocks/body/body.css
@@ -3,6 +3,6 @@
   font-family: "Inter",Arial, sans-serif;
   margin: 0;
   width: 100%;
-  webkit-font-smoothing: antialiased;
+  -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
