--- a/blocks/element/__img/element__img.css
+++ b/blocks/element/__img/element__img.css
@@ -1,5 +1,5 @@
 .element__img{
-  background-size: cover;
+  object-fit: cover;
   width: 282px;
   aspect-ratio: 1/1;
   border-top-right-radius: 10px;
