--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -1,8 +1,14 @@
 .element__like{
-  margin: 0 0 0 0;
+  background-image: url("../../../images/element__like_heart_white.png");
+  margin: 0;
   width: 22px;
   height: 19px;
   background-size: cover;
   align-self: center;
   border: none;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.element__like:hover{
+  opacity: 0.5;
 }
