--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -7,8 +7,10 @@
   width: 100%;
   height: 100%;
   z-index: 1;
+  justify-content: center;
+  align-items: center;
 }
-.popup:after{
+.popup::after{
   content: '';
   position: fixed;
   top: 0;
