--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -8,7 +8,7 @@
   border-radius: 2px;
   display: flex;
   justify-content: center;
-  background-color: black;
+  background-color: rgba(0,0,0,0);
 }
 
 @media screen and (max-width: 768px){
