--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -4,7 +4,7 @@
   aspect-ratio: 1/1;
   align-self: center;
   background-size: cover;
-  background-color: black;
+  background-color: rgba(0,0,0,0);
   border: 1px solid #FFFFFF;
   box-sizing: border-box;
   display: flex;
