--- a/blocks/element/__like/_active/element__like_active.css
+++ b/blocks/element/__like/_active/element__like_active.css
@@ -1,3 +1,4 @@
 .element__like_active {
-  background-image: url("../../../../images/element__like_active.png");
+  background: url("../../../../images/element__like_active.png") center no-repeat;;
+  opacity: 1;
 }
