--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,5 +1,7 @@
 .popup{
-  display: none;
+  display: flex;
+  visibility: hidden;
+  opacity: 0;
   position: fixed;
   margin: 0;
   top: 0;
@@ -9,6 +11,7 @@
   z-index: 1;
   justify-content: center;
   align-items: center;
+  transition: visibility 0.3s linear, opacity 0.3s linear;
 }
 .popup::after{
   content: '';
