--- a/pages/index.css
+++ b/pages/index.css
@@ -21,14 +21,18 @@
 @import url("../blocks/element/__name-like/element__name-like.css");
 @import url("../blocks/element/__name/element__name.css");
 @import url("../blocks/element/__like/element__like.css");
+@import url("../blocks/element/__trash/element__trash.css");
 @import url("../blocks/element/__like/_active/element__like_active.css");
 @import url("../blocks/footer/footer.css");
 @import url("../blocks/footer/__copyright/footer__copyright.css");
 @import url("../blocks/popup/popup.css");
 @import url("../blocks/popup/__container/popup__container.css");
+@import url("../blocks/popup/__container/_width/popup__container_width.css");
 @import url("../blocks/popup/__title/popup__title.css");
 @import url("../blocks/popup/__input/popup__input.css");
 @import url("../blocks/popup/__button/popup__button.css");
 @import url("../blocks/popup/__cross/popup__cross.css");
 @import url("../blocks/popup/_opened/popup_opened.css");
 @import url("../blocks/popup/__form/popup__form.css");
+@import url("../blocks/popup/__img/popup__img.css");
+@import url("../blocks/popup/__img-name/popup__img-name.css");
