--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -12,10 +12,7 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   box-sizing: border-box;
   padding-bottom: 13px;
-}
-
-.popup__input:first-child{
-  margin-bottom: 30px;
+  position: relative;
 }
 
 @media screen and (max-width: 768px) {
