--- a/pages/index.css
+++ b/pages/index.css
@@ -30,9 +30,14 @@
 @import url("../blocks/popup/__container/_width/popup__container_width.css");
 @import url("../blocks/popup/__title/popup__title.css");
 @import url("../blocks/popup/__input/popup__input.css");
+@import url("../blocks/popup/__label/popup__label.css");
 @import url("../blocks/popup/__button/popup__button.css");
+@import url("../blocks/popup/__button/_type/popup__button_type_inactive.css");
 @import url("../blocks/popup/__close/popup__close.css");
 @import url("../blocks/popup/_opened/popup_opened.css");
 @import url("../blocks/popup/__form/popup__form.css");
 @import url("../blocks/popup/__img/popup__img.css");
 @import url("../blocks/popup/__img-name/popup__img-name.css");
+@import url("../blocks/popup/__input-error/popup__input-error.css");
+@import url("../blocks/popup/__input-error/_type/popup__input-error_type_active.css");
+@import url("../blocks/popup/__input/_type/popup__input_type_error.css");
