--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -20,8 +20,11 @@
 @import url("../blocks/element/__img/element__img.css");
 @import url("../blocks/element/__name-like/element__name-like.css");
 @import url("../blocks/element/__name/element__name.css");
+@import url("../blocks/element/__container/element__container.css");
 @import url("../blocks/element/__like/element__like.css");
+@import url("../blocks/element/__like-number/element__like-number.css");
 @import url("../blocks/element/__trash/element__trash.css");
+@import url("../blocks/element/__trash/_hidden/element__trash_hidden.css");
 @import url("../blocks/element/__like/_active/element__like_active.css");
 @import url("../blocks/footer/footer.css");
 @import url("../blocks/footer/__copyright/footer__copyright.css");
