--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -6,6 +6,7 @@
 @import url("../blocks/profile/profile.css");
 @import url("../blocks/profile/__name-info/profile__name-info.css");
 @import url("../blocks/profile/__container/profile__container.css");
+@import url("../blocks/profile/__avatar-container/profile__avatar-container.css");
 @import url("../blocks/profile/__name/profile__name.css");
 @import url("../blocks/profile/__info/profile__info.css");
 @import url("../blocks/profile/__avatar/profile__avatar.css");
@@ -34,6 +35,7 @@
 @import url("../blocks/popup/__title/popup__title.css");
 @import url("../blocks/popup/__input/popup__input.css");
 @import url("../blocks/popup/__label/popup__label.css");
+@import url("../blocks/popup/__label/_margin/popup__label_margin_first.css");
 @import url("../blocks/popup/__button/popup__button.css");
 @import url("../blocks/popup/__button/_type/popup__button_type_inactive.css");
 @import url("../blocks/popup/__close/popup__close.css");
